// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator java-audit of entity-audit JHipster blueprint > run using auditFramework custom > should succeed 1`] = `
{
  ".jhipster/Audited.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/audit/AsyncEntityAuditEventWriter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/audit/EntityAuditEventListener.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/audit/EntityAuditEventWriter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/audit/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Audited.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/EntityAuditEvent.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/enumeration/EntityAuditAction.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/enumeration/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAuditEventRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/EntityAuditResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20220101000100_added_entity_EntityAuditEvent.xml": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/audit/TestEntityAuditEventWriter.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTestSamples.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator java-audit of entity-audit JHipster blueprint > run using auditFramework javers > should succeed 1`] = `
{
  ".jhipster/Audited.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/audit/AuditedEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/audit/JaversAuthorProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/audit/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Audited.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JaversEntityAuditResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/dto/EntityAuditAction.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/dto/EntityAuditEvent.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTestSamples.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator java-audit of entity-audit JHipster blueprint > run using auditFramework null > should succeed 1`] = `
{
  ".jhipster/Audited.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Audited.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuditedTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTestSamples.java": {
    "stateCleared": "modified",
  },
}
`;
